# UIT

uit-repo/: BuildSystem.mk  Makefile  env.bat  env.sh  make.bat
uit-repo/conf/: linux-arm.sh  linux-x11.sh  qnx.cmake  qnx700-aarch64.sh  win32.bat
uit-repo/conf/util/: helper.sh  update.sh
uit-repo/package/: Makefile  make.bat
uit-repo/package/uit-3rdparty/: CMakeLists.txt
uit-repo/package/uit-doc/: CMakeLists.txt  【uit】【core】：日志系统及运行时环境变量.docx  【uit】【数据驱动】：设计说明及开发者指南.docx  【uit】【框架】：architecure.pptx  【uit】【框架】：分支管理策略.docx  【uit】【框架】：图层管理.docx  【uit】【框架】：工具.docx  【uit】【框架】：结构.docx  【uit】【框架】：编译与集成.docx  【uit】【框架】：运行.docx
uit-repo/package/uit-env/: CMakeLists.txt
uit-repo/package/uit-env/linux-x11/: commonapi.ini  uit.env.sh  uit.startup.sh  vsomeip-dataservice.json
uit-repo/package/uit-env/qnx700-aarch64/: commonapi.ini  uit.env-ext.sh  uit.startup.sh
uit-repo/package/uit-env/win32/: commonapi.ini  uit.env.bat  uit.screenfw.startup.bat  uit.startup.bat
uit-repo/package/uit-fw-data/: BuildSystem.Depends  CMakeLists.txt  README.md
uit-repo/package/uit-fw-data/etc/: CMakeLists.txt  uit.svc.data.conf
uit-repo/package/uit-fw-data/etc/data-event/: Data.json  EnumDefinition.json  Event.json  ItemTemplate.json  readme.xlsx
uit-repo/package/uit-fw-data/example/: CMakeLists.txt
uit-repo/package/uit-fw-data/example/simulator/: CMakeLists.txt  CurrentClusterInfo.cpp  CurrentClusterInfo.h  CurrentDataInfo.cpp  CurrentDataInfo.h  CurrentEnumDefinitionInfo.cpp  CurrentEnumDefinitionInfo.h  CurrentEventInfo.cpp  CurrentEventInfo.h  CurrentInfo.qml  CurrentItemTemplateInfo.cpp  CurrentItemTemplateInfo.h  DataIcon.qml  DataInfo.qml  EnumDefinitionInfo.qml  EventArg.qml  EventInfo.qml  EventListener.qml  ImageProvider.cpp  ImageProvider.h  ItemTemplateInfo.qml  LogPanel.qml  MainPage.qml  ModelCluster.cpp  ModelCluster.h  ModelTree.qml  Simulator.pro  SocketDebugger.cpp  SocketDebugger.h  TableData.qml  TreeModel.cpp  TreeModel.h  TreeNode.cpp  TreeNode.h  Type.cpp  Type.h  ValueInfo.qml  ValueInput.qml  main.cpp  main.qml  (+1 more)
uit-repo/package/uit-fw-data/example/simulator/simulator/QtQuick/Controls/Private/: CalendarUtils.jsc  StackView.jsc  style.jsc
uit-repo/package/uit-fw-data/example/test-controller/: CMakeLists.txt  ControllerApp.cpp  ControllerApp.h
uit-repo/package/uit-fw-data/example/test-view/: CMakeLists.txt  ViewApp.cpp  ViewApp.h
uit-repo/package/uit-fw-data/include/: CMakeLists.txt
uit-repo/package/uit-fw-data/include/datafw/: Application.h  Controller.h  ImageData.h  Model.h  Parser.h  Type.h  View.h
uit-repo/package/uit-fw-data/resource/: CMakeLists.txt
uit-repo/package/uit-fw-data/src/: CMakeLists.txt
uit-repo/package/uit-fw-data/src/commonapi/: CMakeLists.txt
uit-repo/package/uit-fw-data/src/commonapi/datafw-api/: CMakeLists.txt
uit-repo/package/uit-fw-data/src/commonapi/datafw-someip/: CMakeLists.txt
uit-repo/package/uit-fw-data/src/commonapi/fidl/: ControllerServer.fdepl  ControllerServer.fidl  DatafwTypes.fdepl  DatafwTypes.fidl  ViewServer.fdepl  ViewServer.fidl
uit-repo/package/uit-fw-data/src/dataservice/: CMakeLists.txt  DataService.cpp  DataService.h
uit-repo/package/uit-fw-data/src/libdatafw/: Application.cpp  CMakeLists.txt  Controller.cpp  ControllerServerImp.cpp  ControllerServerImp.h  DataCluster.cpp  DataCluster.h  EnumDefinitionManager.cpp  EnumDefinitionManager.h  EventCluster.cpp  EventCluster.h  ImageData.cpp  ItemTemplateManager.cpp  ItemTemplateManager.h  Model.cpp  Model_Internal.cpp  Model_Internal.h  Parser.cpp  Share.h  SocketDebugHelper.cpp  SocketDebugHelper.h  Type.cpp  View.cpp  ViewServerImp.cpp  ViewServerImp.h
uit-repo/package/uit-fw-screen/: BuildSystem.Depends  CMakeCache.txt  CMakeLists.txt
uit-repo/package/uit-fw-screen/example/test-controller/: CMakeLists.txt  ControllerApp.cpp  ControllerApp.h
uit-repo/package/uit-fw-screen/example/test-listener/: CMakeLists.txt  ListenerApp.cpp  ListenerApp.h
uit-repo/package/uit-fw-screen/include/screenfw/: ScreenController.h  ScreenListener.h
uit-repo/package/uit-fw-screen/src/: CMakeLists.txt
uit-repo/package/uit-fw-screen/src/commonapi/: CMakeLists.txt
uit-repo/package/uit-fw-screen/src/commonapi/fidl/: Controller.fdepl  Controller.fidl  Listener.fdepl  Listener.fidl  ScreenfwTypes.fdepl  ScreenfwTypes.fidl
uit-repo/package/uit-fw-screen/src/commonapi/screenfw-api/: CAPI-GenerateProxyAndStub.cmake  CMakeLists.txt
uit-repo/package/uit-fw-screen/src/commonapi/screenfw-someip/: CAPI-GenerateSomeIPBinding.cmake  CMakeLists.txt
uit-repo/package/uit-fw-screen/src/libscreenfw/: CMakeLists.txt  Model.cpp  Model.h  ScreenConfig.cpp  ScreenConfig.h  ScreenController.cpp  ScreenControllerStubImp.cpp  ScreenControllerStubImp.h  ScreenListener.cpp  ScreenListenerStubImp.cpp  ScreenListenerStubImp.h  ServiceHelper.h
uit-repo/package/uit-fw-screen/src/libscreenfw/conf/: uit.screen.conf
uit-repo/package/uit-fw-screen/src/screenservice/: CMakeLists.txt  ScreenService.cpp  ScreenService.h
uit-repo/package/uit-lib-core/: BuildSystem.Depends  CMakeLists.txt
uit-repo/package/uit-lib-core/etc/: CMakeLists.txt
uit-repo/package/uit-lib-core/example/: CMakeLists.txt
uit-repo/package/uit-lib-core/example/test-core/: CMakeLists.txt  TestBase.h  TestEvent.cpp  TestEvent.h  TestLog.cpp  TestLog.h  TestRuntime.cpp  TestRuntime.h  main.cpp
uit-repo/package/uit-lib-core/include/: CMakeLists.txt
uit-repo/package/uit-lib-core/include/core/: Def.h  Event.h  Log.h  Runtime.h
uit-repo/package/uit-lib-core/src/: CMakeLists.txt
uit-repo/package/uit-lib-core/src/core/: CMakeLists.txt  Def.cpp  Log.cpp  Log_Internal.cpp  Log_Internal.h  Runtime.cpp
